# VM-HitronBusinessHub

./: ARCHITECTURE.md  ENDPOINTS.md  NOTES.md  README.md  auth.py  client.py  crypto.py  endpoints.py  init.py  pyproject.toml  requirements.txt  transport.py
docs/: crypto.md  firmware-notes.md  login.md
examples/: login.py
firmware/: ALG.html  index.html  login.html
firmware/lib/: encrypt-decrypt.js  hitronSync.js  mainApp.js  security_alg.js
tests/: test_crypto.py  test_public_api.py
vmhub/: __init__.py  auth.py  client.py  crypto.py  exceptions.py  models.py  session.py
vmhub/api/: __init__.py  advanced.py  device.py  firewall.py  network.py  users.py  wifi.py
vmhub/models/: __init__.py
vmhub/util/: __init__.py  cookies.py  csrf.py  logging.py
